--- a/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp.Android/RobotVoiceControlMobileApp.Android.csproj
+++ b/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp.Android/RobotVoiceControlMobileApp.Android.csproj
@@ -110,7 +110,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionRobotVoiceControlMobileAppAndroidHideInfoBar="True" TriggeredFromHotReload="False" />
+      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadDebuggerTimeoutExceptionRobotVoiceControlMobileAppAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
