--- a/RobotVRM/.settings/org.eclipse.core.resources.prefs
+++ b/RobotVRM/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,10 @@
 eclipse.preferences.version=1
+encoding//Debug/MSP430/F149/subdir_rules.mk=UTF-8
+encoding//Debug/MSP430/F149/subdir_vars.mk=UTF-8
+encoding//Debug/MSP430/FR_x/subdir_rules.mk=UTF-8
+encoding//Debug/MSP430/FR_x/subdir_vars.mk=UTF-8
+encoding//Debug/MSP430/G2452/subdir_rules.mk=UTF-8
+encoding//Debug/MSP430/G2452/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
