--- a/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp.iOS/Info.plist
+++ b/RobotVoiceControlMobileApp/RobotVoiceControlMobileApp.iOS/Info.plist
@@ -34,5 +34,8 @@
     <string>RobotVoiceControlMobileApp</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+  
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Voice transcription requires microphone access</string>
 </dict>
 </plist>
